# project-template

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  bootstrap.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/source/: conf.py  index.rst  modules.rst
scripts/: commit-push.ps1  merge-all-branches.ps1
src/: main.py
src/config/: __init__.py
tests/: test_main.py
